--- a/Session_0_install_packages.Rmd
+++ b/Session_0_install_packages.Rmd
@@ -17,7 +17,7 @@ This will make more sense as we go through the workshop but will be run before i
 # install.packages("remotes")
 remotes::install_github("rlesur/klippy")
 # List of required packages
-required_packages <- c("ggplot2","tidyverse","dplyr","hrbrthemes","viridis","ggpubr","GGally","ggridges","tidyr","scales","deSolve",
+required_packages <- c("ggplot2","tidyverse","dplyr","hrbrthemes","viridis","ggpubr","GGally","ggridges","tidyr","scales","deSolve","bayestestR",
 "shinySIR","epiR","pROC","mixtools","broom","ggiraphExtra","MASS","bbmle","coda","rjags","bayesplot","spatstat","forecast","pacman","devtools","BiocManager")
 
 # Function to check if a package is installed
