--- a/Session_6_Regression.Rmd
+++ b/Session_6_Regression.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Modelling workshop"
-output: github_document
+title: "Modelling workshop: Session 6"
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
