--- a/Session_7_Model_fitting.Rmd
+++ b/Session_7_Model_fitting.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Modelling workshop"
-output: github_document
+title: "Modelling workshop: Session 7"
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
