--- a/Session_8_SpaceTime_Trees.Rmd
+++ b/Session_8_SpaceTime_Trees.Rmd
@@ -220,6 +220,18 @@ Now let's import the data. Note that this data is available from the *epirhandbo
 counts <- rio::import("data/campylobacter_germany.xlsx")
 ```
 
+Note that the above takes some time, so as I already put the data in the data file we can use this shortcut:
+
+```{r, class.source='klippy'}
+install.packages("readxl", dependencies = T)
+library(readxl)
+library(tidyverse)
+library(dplyr)
+library(tsibble)
+# read_excel reads both xls and xlsx files
+counts <- as.data.frame(read_excel("data/campylobacter_germany.xlsx"))
+```
+
 Next we reformat the date column and organise the dates into weeks:
 
 ```{r, class.source='klippy'}
